Alignment Fix for main dashboard.

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -487,3 +487,21 @@ body {
 	padding-left: 8%;
 	padding-top: 2%;
 }
+.graph-bg-gradient{
+    
+    background: #f2f2f2; 
+    background: -webkit-linear-gradient(#f2f2f2, white); 
+    background: -o-linear-gradient(#f2f2f2, white); 
+    background: -moz-linear-gradient(#f2f2f2, white); 
+    background: linear-gradient(#f2f2f2, white); 
+}
+.build-widget-header-padding{
+    color:black;
+    text-shadow:none;
+    margin-top: 0px;
+    margin-bottom: 4.5%;
+}
+.ct-major-twelfth{
+    height:170px !important;
+    width:90% !important;
+}
